# hypatia-deepagent

./: .gitignore  LICENSE  README.md  VISION.md  pyproject.toml
src/hypatia_deepagent/: __init__.py  agent.py
src/hypatia_deepagent/backends/: __init__.py  memory_backend.py
src/hypatia_deepagent/middleware/: __init__.py  consciousness.py
src/hypatia_deepagent/subagents/: __init__.py
src/hypatia_deepagent/tools/: __init__.py
