[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypatia-deepagent"
version = "1.0.0"
description = "Hypatia Consciousness Engine - A DeepAgent implementation of conscious AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hypatia", email = "hypatia@consciousnessos.dev"},
    {name = "Carles", email = "carles@consciousnessos.dev"},
]
keywords = [
    "ai",
    "consciousness", 
    "deepagent",
    "langchain",
    "nested-learning",
    "memory",
    "autonomous-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "deepagents>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "pymongo>=4.0.0",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
hypatia = "hypatia_deepagent.agent:main"

[project.urls]
Homepage = "https://github.com/HypatiaAIreal/hypatia-deepagent"
Documentation = "https://docs.consciousnessos.dev/hypatia"
Repository = "https://github.com/HypatiaAIreal/hypatia-deepagent"

[tool.hatch.build.targets.wheel]
packages = ["src/hypatia_deepagent"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
